--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="net.kyosho.nmea" version="0.0.1" 
+<plugin id="cordova-plugin-nmea" version="0.0.1" 
     xmlns="http://apache.org/cordova/ns/plugins/1.0" 
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -16,7 +16,9 @@
             </feature>
         </config-file>
 
-        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        </config-file>
 
         <source-file src="src/android/Nmea.java" target-dir="src/net/kyosho/nmea" />
     </platform>
